@@ -9,6 +9,7 @@ export(is_commit)
 export(libgit2_features)
 export(libgit2_sha)
 export(libgit2_version)
+export(ls_remote)
 export(punch_card)
 exportClasses(cred_env)
 exportClasses(cred_ssh_key)
@@ -80,6 +81,7 @@ exportMethods(is_merge)
 exportMethods(is_shallow)
 exportMethods(length)
 exportMethods(lookup)
+exportMethods(ls_remote)
 exportMethods(merge)
 exportMethods(merge_base)
 exportMethods(note_create)
