@@ -56,5 +56,13 @@ remote_remove(repo, "foobar")
 
 stopifnot(identical(remotes(repo), character(0)))
 
+refs <- ls_remote("https://github.com/ropensci/git2r")
+stopifnot(length(refs) > 0)
+stopifnot(names(refs) > 0)
+stopifnot(any(names(refs) == "HEAD"))
+
+# an invalid URL should throw an error
+tools::assertError(ls_remote("bad"))
+
 ## Cleanup
 unlink(path, recursive=TRUE)
